--- a/SeeShellsV3/SeeShellsV3/UI/InspectorView/InspectorView.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/InspectorView/InspectorView.xaml
@@ -6,12 +6,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:SeeShellsV3.UI"
              xmlns:data="clr-namespace:SeeShellsV3.Data"
+             xmlns:converters="clr-namespace:SeeShellsV3.UI.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <local:CamelCaseConverter x:Key="CamelCaseConverter"/>
         <local:UpperCaseConverter x:Key="UpperCaseConverter"/>
         <local:SelectedItemConverter x:Key="SelectedItemConverter"/>
+        <converters:ByteArrayConverter x:Key="ByteArrayConverter"/>
 
         <!-- User -->
         <DataTemplate DataType="{x:Type data:User}">
@@ -324,7 +326,7 @@
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock TextWrapping="Wrap" FontWeight="Bold" Text="{Binding Key, Converter={StaticResource CamelCaseConverter}}" Grid.Column="0" HorizontalAlignment="Right"/>
-                                <TextBlock TextWrapping="Wrap" Text="{Binding Value}" Grid.Column="1" Margin="6 0 0 0"/>
+                                <TextBlock TextWrapping="Wrap" Text="{Binding Value, Converter={StaticResource ByteArrayConverter}}" Grid.Column="1" Margin="6 0 0 0"/>
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
