Initial implementation of File Size fix

--- a/SeeShellsV3/SeeShellsV3/UI/InspectorView/InspectorView.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/InspectorView/InspectorView.xaml
@@ -13,6 +13,7 @@
         <local:CamelCaseConverter x:Key="CamelCaseConverter"/>
         <local:UpperCaseConverter x:Key="UpperCaseConverter"/>
         <local:SelectedItemConverter x:Key="SelectedItemConverter"/>
+        <converters:FileSizeConverter x:Key="FileSizeConverter"/>
         <converters:ByteArrayConverter x:Key="ByteArrayConverter"/>
 
         <!-- User -->
