--- a/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
@@ -21,6 +21,11 @@
                     <MenuItem Header="As Report" Click="Export_Window_Click"/>
                 </MenuItem>
                 <MenuItem Header="Reset" Background="Transparent" Click="ResetMenuItem_Click"/>
+                <MenuItem Header="Timezone" Background="Transparent">
+                    <MenuItem Header="Timezone 1"/>
+                    <MenuItem Header="Timezone 2"/>
+                    <MenuItem Header="Timezone 3"/>
+                </MenuItem>
             </Menu>
         </mah:WindowCommands>
     </mah:MetroWindow.LeftWindowCommands>
