make light theme teal

--- a/SeeShellsV3/SeeShellsV3/UI/Themes/LightTheme.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/Themes/LightTheme.xaml
@@ -3,7 +3,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Teal.xaml" />
 
         <ResourceDictionary Source="/AvalonDock.Themes.VS2013;component/LightBrushs.xaml" />
         <ResourceDictionary Source="/AvalonDock.Themes.VS2013;component/Themes/Generic.xaml" />
