Button now updates and tracks timezone However, this still doesn't update the times throughout the application.

--- a/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
@@ -41,10 +41,10 @@
                               ContentDirection="LeftToRight"
                               Margin="5 0"/>
             <Menu Background="Transparent">
-                <MenuItem Header="Timezones" Background="Transparent" ItemsSource="{Binding Timezones}">
+                <MenuItem Header="{Binding CurrentTimezone.Value, Mode=OneWay}" Background="Transparent" ItemsSource="{Binding Timezones}">
                     <MenuItem.ItemTemplate>
                         <DataTemplate>
-                            <MenuItem Header="{Binding Key}" Background="Transparent"/>
+                            <MenuItem Header="{Binding Key}" Background="Transparent" Click="ChangeTimezone_Click"/>
                         </DataTemplate>
                     </MenuItem.ItemTemplate>
                 </MenuItem>
