Added a subscriber in inspector

--- a/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
@@ -41,10 +41,10 @@
                               ContentDirection="LeftToRight"
                               Margin="5 0"/>
             <Menu Background="Transparent">
-                <MenuItem Header="{Binding CurrentTimezone.Value, Mode=OneWay}" Background="Transparent" ItemsSource="{Binding Timezones}" Width="39">
+                <MenuItem Header="{Binding TimezoneManager.CurrentTimezone.Identifier}" Background="Transparent" ItemsSource="{Binding TimezoneManager.SupportedTimezones}" Width="39">
                     <MenuItem.ItemTemplate>
                         <DataTemplate>
-                            <MenuItem Header="{Binding Key}" Background="Transparent" Click="ChangeTimezone_Click"/>
+                            <MenuItem Header="{Binding Name}" Background="Transparent" Click="ChangeTimezone_Click"/>
                         </DataTemplate>
                     </MenuItem.ItemTemplate>
                 </MenuItem>
