Removed UtcToLocalTimeStringConverter usages

--- a/SeeShellsV3/SeeShellsV3/UI/TimelineView/TimelineView.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/TimelineView/TimelineView.xaml
@@ -17,7 +17,6 @@
 
         <local:RadioButtonSelector x:Key="RadioSelector" />
         <local:EventTableSelector x:Key="EventSelector" />
-        <local:UtcToLocalTimeStringConverter x:Key="UtcToLocalTimeStringConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -119,7 +118,7 @@
                     </Style>
                 </DataGrid.RowStyle>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Event Time" Binding="{Binding TimeStamp, Converter={StaticResource UtcToLocalTimeStringConverter}}"/>
+                    <DataGridTextColumn Header="Event Time" Binding="{Binding TimeStamp}"/>
                     <DataGridTextColumn Header="Description" Binding="{Binding Description}"/>
                     <DataGridTextColumn Header="Type" Binding="{Binding TypeName}"/>
                     <DataGridTextColumn Header="User" Binding="{Binding User.Name}"/>
