--- a/SeeShellsV3/SeeShellsV3/UI/ShellItemTableView/ShellItemTableView.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/ShellItemTableView/ShellItemTableView.xaml
@@ -7,9 +7,6 @@
              xmlns:data="clr-namespace:SeeShellsV3.Data"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <local:UtcToLocalTimeStringConverter x:Key="UtcToLocalTimeStringConverter"/>
-    </UserControl.Resources>
     <Grid>
         <DataGrid Name="ShellItemTable" ItemsSource="{Binding ShellItems}" SelectionMode="Single" SelectedCellsChanged="DataGrid_SelectedCellsChanged" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True">
             <DataGrid.Columns>
@@ -20,7 +17,7 @@
                 <DataGridTextColumn Header="Location Path" Binding="{Binding Place.PathName}"/>
                 <DataGridTextColumn Header="Registry" Binding="{Binding RegistryHive.Name}"/>
                 <DataGridTextColumn Header="User" Binding="{Binding RegistryHive.User.Name}"/>
-                <DataGridTextColumn Header="Last Registry Write" Binding="{Binding LastRegistryWriteDate, Converter={StaticResource UtcToLocalTimeStringConverter}}"/>
+                <DataGridTextColumn Header="Last Registry Write" Binding="{Binding LastRegistryWriteDate}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
