--- a/SeeShellsV3/SeeShellsV3/UI/FilterControlView/FilterControlView.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/FilterControlView/FilterControlView.xaml
@@ -11,6 +11,16 @@
         <local:EventTypeConverter x:Key="EventTypeConverter"/>
     </UserControl.Resources>
     <StackPanel>
+
+        <Grid Margin="4">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock FontWeight="Bold" Text="Keyword" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBox Text="{Binding Keyword}" KeyUp="KeywordUpdate" mah:TextBoxHelper.ClearTextButton="True" Grid.Column="1"/>
+        </Grid>
+
         <Grid Margin="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="80"/>
