make customizable copies of built-in MahApps themes

--- a/SeeShellsV3/SeeShellsV3/UI/Themes/LightTheme.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/Themes/LightTheme.xaml
@@ -3,16 +3,11 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Teal.xaml" />
+        <ResourceDictionary Source="./LightThemeBehind.xaml" />
 
         <ResourceDictionary Source="/AvalonDock.Themes.VS2013;component/LightBrushs.xaml" />
         <ResourceDictionary Source="/AvalonDock.Themes.VS2013;component/Themes/Generic.xaml" />
 
-        <!--
-            TODO: create custom MahApps theme that matches SeeShells sketches
-            https://mahapps.com/docs/themes/thememanager
-        -->
-            
         <!--
             TODO: create custom Avalon Dock theme that matches SeeShells sketches
             https://stackoverflow.com/questions/10017949/restyling-avalondock-for-high-contrast-themes
