--- a/SeeShellsV3/SeeShellsV3/UI/Themes/LightThemeBehind.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/Themes/LightThemeBehind.xaml
@@ -1,9 +1,4 @@
-﻿<!--
-  C:\Users\AD239\.nuget\packages\mahapps.metro\2.4.9\lib\netcoreapp3.1\MahApps.Metro.dll
-  \Styles\Themes\Light.Teal.xaml
--->
-
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:markup="clr-namespace:MahApps.Metro.Markup;assembly=MahApps.Metro" xmlns:markupWithAssembly="clr-namespace:MahApps.Metro.Markup;assembly=MahApps.Metro" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" xmlns:system="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:markup="clr-namespace:MahApps.Metro.Markup;assembly=MahApps.Metro" xmlns:markupWithAssembly="clr-namespace:MahApps.Metro.Markup;assembly=MahApps.Metro" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" xmlns:system="clr-namespace:System;assembly=mscorlib">
     <system:String x:Key="Theme.Name">Light.Teal</system:String>
     <system:String x:Key="Theme.Origin">MahApps.Metro</system:String>
     <system:String x:Key="Theme.DisplayName">Teal (Light)</system:String>
