--- a/SeeShellsV3/SeeShellsV3/UI/Themes/LightTheme.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/Themes/LightTheme.xaml
@@ -4,6 +4,7 @@
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
         <ResourceDictionary Source="./LightThemeBehind.xaml" />
+        <ResourceDictionary Source="./Palettes.xaml" />
 
         <ResourceDictionary Source="/AvalonDock.Themes.VS2013;component/LightBrushs.xaml" />
         <ResourceDictionary Source="/AvalonDock.Themes.VS2013;component/Themes/Generic.xaml" />
