Improved add to report You can now right click a shell event to add it to or remove it from reports. This functions correctly, however, the text on the context menu doesn't always reflect the action.

--- a/SeeShellsV3/SeeShellsV3/UI/TimelineView/TimelineView.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/TimelineView/TimelineView.xaml
@@ -103,8 +103,13 @@
                       AutoGenerateColumns="False"
                       CanUserAddRows="False" IsReadOnly="True"
                       SelectionMode="Single">
+                <DataGrid.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="{Binding ReportStatus}" Click="DataGrid_Report_Click"></MenuItem>
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
                 <DataGrid.RowStyle>
-                    <Style TargetType="{x:Type DataGridRow}"  BasedOn="{StaticResource MahApps.Styles.DataGridRow}">
+                    <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MahApps.Styles.DataGridRow}">
                         <Setter Property="IsEnabled">
                             <Setter.Value>
                                 <MultiBinding Converter="{StaticResource EventSelector}">
