Added ability to export selected as CSV

--- a/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
+++ b/SeeShellsV3/SeeShellsV3/UI/MainWindow/MainWindow.xaml
@@ -19,7 +19,10 @@
                 </MenuItem>
                 <MenuItem Header="Export" Background="Transparent">
                     <MenuItem Header="As Report" Click="Export_Window_Click"/>
-                    <MenuItem Header="As CSV" Click="Export_CSV_Click"/>
+                    <MenuItem Header="As CSV">
+                        <MenuItem Header="Export Selected" Click="Export_CSV_Click"></MenuItem>
+                        <MenuItem Header="Export Filtered" Click="Export_CSV_Click"></MenuItem>
+                    </MenuItem>
                 </MenuItem>
                 <MenuItem Header="Reset" Background="Transparent" Click="ResetMenuItem_Click"/>
             </Menu>
